# pommes

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
src/: lib.rs  parser.rs  simpler.rs  tests.rs
src/genbr/: main.rs
src/mvn2rpm/: main.rs
templates/: package.spec
tests/: README.md  parse.rs
tests/data/: README.md
tests/data/jsoup-1.13.1/: pom.xml
tests/data/jsoup-1.19.1/: pom.xml
tests/data/maven-antrun-plugin-3.0.0/: pom.xml
tests/data/maven-bundle-plugin-4.2.1/: pom.xml
tests/data/maven-bundle-plugin-6.0.1/: pom.xml
tests/data/mojo-parent-50/: pom.xml
