[package]
name = "pomm"
description = "project object model model (and parser using serde)"
license = "MIT OR Apache-2.0"

version = "0.0.0-dev"
edition = "2018"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["maven", "pom", "serde", "xml"]
repository = "https://pagure.io/ironthree/pomm"

# move the binary to a separate project later
[[bin]]
name = "mvn_genbr"
path = "src/genbr/main.rs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde-xml-rs = "^0.4"
# move this away with the mvn_genbr binary
structopt = "^0.3"

[dev-dependencies]
glob = "^0.3"

# move this away with the mvn_genbr binary
[profile.release]
codegen-units = 1
lto = true
opt-level = 3

