[package]
name = "pommes"
description = "project object model model (and parser using serde)"
license = "MIT OR Apache-2.0"

version = "0.0.1"
edition = "2018"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["maven", "pom", "serde", "xml"]
repository = "https://pagure.io/ironthree/pommes"

[[bin]]
name = "mvn-genbr"
path = "src/genbr/main.rs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde-xml-rs = "^0.4"
structopt = "^0.3"

[dev-dependencies]
glob = "^0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

